# tds

./: .clang-format  .gitignore  CMakeLists.txt  README.md  format.sh  run.sh
src/: main.cpp
